--- a/mnist_dcgan.ipynb
+++ b/mnist_dcgan.ipynb
@@ -9,14 +9,25 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "import torch.optim as optim\n",
     "from torchvision import datasets, transforms\n",
     "from torch.autograd import Variable\n",
+    "from torch.optim.lr_scheduler import StepLR\n",
     "from torchvision.utils import save_image\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "import tqdm\n",
+    "import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "\n",
     "cuda_available = torch.cuda.is_available()\n",
     "\n",
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,9 +220,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#create a dataset with generated images and their latent space representations as the label\n",
+    "class GeneratedDataset(Dataset):\n",
+    "    def __init__(self, G, num_samples):\n",
+    "        self.G = G\n",
+    "        self.num_samples = num_samples\n",
+    "        self.z = torch.randn(num_samples, latent_size, 1, 1, device=device)\n",
+    "        self.x = self.G(self.z)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return self.num_samples\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.x[idx], self.z[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(128, 1, 28, 28)\n",
+      "(128, 1024, 1, 1)\n",
+      "Train Epoch: 1 [0/1280 (0%)]\tLoss: 1.008295\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10172/1830818088.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     45\u001b[0m         \u001b[0moutput\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmse_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;31m#batch_idx % 10 == 0:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\torch\\_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    394\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    395\u001b[0m                 inputs=inputs)\n\u001b[1;32m--> 396\u001b[1;33m         \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    397\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    398\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    171\u001b[0m     \u001b[1;31m# some Python versions print out the first line of a multi-line function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    172\u001b[0m     \u001b[1;31m# calls in the traceback and some print out the last line\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 173\u001b[1;33m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[0;32m    174\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    175\u001b[0m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward."
+     ]
+    }
+   ],
    "source": [
     "#create a convnet to find the latent space representation of each image\n",
     "class Net(nn.Module):\n",
@@ -219,10 +274,9 @@
     "        super(Net, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 32, 3, 1)\n",
     "        self.conv2 = nn.Conv2d(32, 64, 3, 1)\n",
-    "        self.dropout1 = nn.Dropout(0.25)\n",
-    "        self.dropout2 = nn.Dropout(0.5)\n",
+    "        self.dropout = nn.Dropout(0.1)\n",
     "        self.fc1 = nn.Linear(9216, 128)\n",
-    "        self.fc2 = nn.Linear(128, 10)\n",
+    "        self.fc2 = nn.Linear(128, latent_size)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.conv1(x)\n",
@@ -230,65 +284,93 @@
     "        x = self.conv2(x)\n",
     "        x = F.relu(x)\n",
     "        x = F.max_pool2d(x, 2)\n",
-    "        x = self.dropout1(x)\n",
     "        x = torch.flatten(x, 1)\n",
     "        x = self.fc1(x)\n",
     "        x = F.relu(x)\n",
-    "        x = self.dropout2(x)\n",
+    "        x = self.dropout(x)\n",
     "        x = self.fc2(x)\n",
-    "        output = F.log_softmax(x, dim=1)\n",
-    "        return output"
+    "        #reshape the output to be the same shape as the latent space\n",
+    "        output = x.view(-1, latent_size, 1, 1)\n",
+    "        return output\n",
+    "\n",
+    "\n",
+    "\n",
+    "lr = 0.001\n",
+    "model = Net().to(device)\n",
+    "model.train()\n",
+    "train_loader = torch.utils.data.DataLoader(GeneratedDataset(G, batch_size*10), batch_size=batch_size, shuffle=True)\n",
+    "\n",
+    "for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "    with torch.no_grad():\n",
+    "        print(data.cpu().numpy().shape)\n",
+    "        print(target.cpu().numpy().shape)\n",
+    "        break\n",
+    "\n",
+    "optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "scheduler = StepLR(optimizer, step_size=1, gamma=0.7)\n",
+    "for epoch in range(1, 3):\n",
+    "    for batch_idx, (data, target) in enumerate(train_loader):\n",
+    "        data, target = data.to(device), target.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = F.mse_loss(output, target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        if True:#batch_idx % 10 == 0:\n",
+    "            print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
+    "                epoch, batch_idx * len(data), len(train_loader.dataset),\n",
+    "                100. * batch_idx / len(train_loader), loss.item()))\n",
+    "\n",
+    "    scheduler.step()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 8/8 [00:03<00:00,  2.08it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6.707550883293152   0.0068160719238221645\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 4/8 [00:02<00:02,  1.62it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_41664/2783058397.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m     \u001b[0mdl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_epoch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG_opt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mD_opt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mG\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgl\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_41664/3263716564.py\u001b[0m in \u001b[0;36mtrain_epoch\u001b[1;34m(G_opt, D_opt, G, D, train)\u001b[0m\n\u001b[0;32m    162\u001b[0m         \u001b[0mG_opt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    163\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 164\u001b[1;33m         \u001b[0mdl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mD_loss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    165\u001b[0m         \u001b[0mgl\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mG_loss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    166\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#now we can generate new training data\n",
     "images = train_dataset.data\n",
+    "labels = train_dataset.targets\n",
+    "generated_images = []\n",
+    "generated_labels = []\n",
     "for i in range(0,100):\n",
     "    #select 2 images at random\n",
-    "    image1 = images[np.random.randint(0,images.shape[0])]\n",
-    "    image2 = images[np.random.randint(0,images.shape[0])]\n",
+    "    idx1 = np.random.randint(0,images.shape[0])\n",
+    "    image1 = images[idx1]\n",
+    "    label1 = labels[idx1]\n",
+    "    label1 = torch.nn.functional.one_hot(torch.tensor(label1), num_classes=10)\n",
+    "    idx2 = np.random.randint(0,images.shape[0])\n",
+    "    image2 = images[idx2]\n",
+    "    label2 = labels[idx2]\n",
+    "    label2 = torch.nn.functional.one_hot(torch.tensor(label2), num_classes=10)\n",
     "\n",
     "    #find the latent space representation of each image\n",
+    "    with torch.no_grad():\n",
+    "        image1 = torch.tensor(image1).float().to(device).unsqueeze(0).unsqueeze(0)\n",
+    "        image2 = torch.tensor(image2).float().to(device).unsqueeze(0).unsqueeze(0)\n",
+    "        z1 = model(image1)\n",
+    "        z2 = model(image2)\n",
+    "\n",
+    "    #interpolate between the two latent space representations\n",
+    "    z = torch.lerp(z1, z2, 0.9)\n",
+    "\n",
+    "    #generate the label by combining the labels of the two images\n",
+    "    label = torch.lerp(label1, label2, 0.9)\n",
+    "\n",
+    "    #generate the image\n",
+    "    with torch.no_grad():\n",
+    "        image = G(z)\n",
+    "        image = image.cpu().numpy().squeeze()\n",
+    "        generated_images.append(image)\n",
+    "        generated_labels.append(label)\n",
     "    \n",
+    "generated_images = np.array(generated_images)\n",
+    "generated_labels = np.array(generated_labels)\n",
+    "#save the generated images and labels\n",
+    "np.save(\"generated_images.npy\", generated_images)\n",
+    "np.save(\"generated_labels.npy\", generated_labels)\n",
     "        "
    ]
   }
