cleanup, added dataset generator

--- a/mnist_dcgan.ipynb
+++ b/mnist_dcgan.ipynb
@@ -329,20 +329,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/3215041400.py:11: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/1876916207.py:11: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  label1 = torch.nn.functional.one_hot(torch.tensor(label1), num_classes=10).float()\n",
-      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/3215041400.py:15: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/1876916207.py:15: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  label2 = torch.nn.functional.one_hot(torch.tensor(label2), num_classes=10).float()\n",
-      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/3215041400.py:19: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/1876916207.py:19: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  image1 = torch.tensor(image1).float().to(device).unsqueeze(0).unsqueeze(0)\n",
-      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/3215041400.py:20: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "C:\\Users\\Timothe\\AppData\\Local\\Temp/ipykernel_50888/1876916207.py:20: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  image2 = torch.tensor(image2).float().to(device).unsqueeze(0).unsqueeze(0)\n"
      ]
     },
@@ -406,8 +406,8 @@
     "print(generated_images.shape)\n",
     "print(generated_labels.shape)\n",
     "#save the generated images and labels\n",
-    "np.save(\"generated_images.npy\", generated_images)\n",
-    "np.save(\"generated_labels.npy\", generated_labels)\n",
+    "np.save(\"./datasets/generated_images.npy\", generated_images)\n",
+    "np.save(\"./datasets/generated_labels.npy\", generated_labels)\n",
     "        "
    ]
   }
