--- a/cnn.ipynb
+++ b/cnn.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model.state_dict(), \"mnist_cnn.pt\")"
+    "torch.save(model.state_dict(), \"./trained_models/mnist_cnn.pt\")"
    ]
   },
   {
